[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Lobby.gd" type="Script" id=1]
[ext_resource path="res://assets/Free Pixel Art Forest/Preview/Background.png" type="Texture" id=2]
[ext_resource path="res://assets/pixel adventure/Menu/Buttons/Close.png" type="Texture" id=3]
[ext_resource path="res://assets/pixel adventure/Menu/Buttons/Settings.png" type="Texture" id=4]
[ext_resource path="res://assets/pixel adventure/Menu/Buttons/Play.png" type="Texture" id=5]

[node name="Menu" type="Node2D"]
position = Vector2( 180.297, 179.309 )
script = ExtResource( 1 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2( 259.907, 8.88323 )
scale = Vector2( 0.560144, 0.793778 )
texture = ExtResource( 2 )

[node name="BotaoIniciar" type="Button" parent="."]
show_behind_parent = true
light_mask = 0
margin_top = -68.0
margin_right = 154.0
margin_bottom = -38.0
text = "Iniciar"
icon = ExtResource( 5 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BotaoControles" type="Button" parent="."]
margin_top = -18.3891
margin_right = 155.0
margin_bottom = 11.6109
rect_pivot_offset = Vector2( -75.3194, -62.4024 )
text = "Controles "
icon = ExtResource( 4 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BotaoSair" type="Button" parent="."]
margin_top = 33.6818
margin_right = 155.0
margin_bottom = 63.6818
text = "Sair"
icon = ExtResource( 3 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="BotaoIniciar" to="." method="_on_BotaoIniciar_pressed"]
[connection signal="pressed" from="BotaoControles" to="." method="_on_BotaoControles_pressed"]
[connection signal="pressed" from="BotaoSair" to="." method="_on_BotaoSair_pressed"]
